--- a/Prison Digital/src/UI/CriminalJusticeSystem/PoliceOfficerLogin.form
+++ b/Prison Digital/src/UI/CriminalJusticeSystem/PoliceOfficerLogin.form
@@ -67,13 +67,13 @@
                   <Component id="lblFeedback" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtFeedback" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
                   <Component id="btnPrisonerTransportCompleted" alignment="2" min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="btnTransportInProgress" alignment="2" min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="btnBeginTransport" alignment="2" min="-2" pref="40" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
